@@ -49,7 +49,7 @@ namespace ODBus {
 class AsyncRequest {
 	PendingCall pending_call;
 
-	std::function<void(Message) noexcept> callback;
+	std::function<void(Message)> callback;
 
 public:
 	operator bool() const noexcept {
