@@ -12,6 +12,8 @@ ver 0.22 (not yet released)
   - ffmpeg: new plugin based on FFmpeg's libavfilter library
   - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
   - volume: convert S16 to S24 to preserve quality and reduce dithering noise
+* switch to C++17
+  - GCC 7 or clang 4 (or newer) recommended
 
 ver 0.21.12 (2019/08/03)
 * decoder
